# Task 2 - Modulo 8.3, Throw and Throws