@@ -10,16 +10,16 @@ import java.util.stream.Stream;
 
 public class FileReader {
 
-    public void readFile() throws FileReaderException {
+    public void readFile(final String fileName) throws FileReaderException {
         ClassLoader classLoader = getClass().getClassLoader();
-        File file = new File(classLoader.getResource("names.txt").getFile());
 
-        try (Stream<String> fileLines = Files.lines(Paths.get("tego-pliku-nie-ma.txt"))) {
+        try (Stream<String> fileLines = Files.lines(Path.of(classLoader.getResource(fileName).toURI()))) {
             fileLines.forEach(System.out::println);
-        } catch (IOException e) {
+        } catch (Exception e) {
             throw new FileReaderException();
         } finally {
             System.out.println("I am gonna be here... always!");
         }
     }
+
 }
